# count-dots

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  debug.h  image.h  main.cc
